<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cs260.journalapplication.NewEntry">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="399dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/New_Entry" />

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                    <!--android:id="@+id/imageView_image"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--app:srcCompat="@mipmap/ic_launcher" />-->
                <!---->
                <!--<VideoView-->
                    <!--android:id="@+id/videoview_video"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1" />-->

            <!--</LinearLayout>-->



            <!--<VideoView-->
            <!--android:id="@+id/videoview_video"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1" />-->

            <!--<ImageView-->
            <!--android:id="@+id/imageView_image"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--app:srcCompat="@mipmap/ic_launcher" />-->

            <!--<Button-->
            <!--android:id="@+id/button_addVideo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:onClick="addVideo"-->
            <!--android:text="@string/add_video" />-->

            <!--<Button-->
            <!--android:id="@+id/button_addPhoto"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_conten"-->
            <!--android:onClick="addPhoto"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:text="@string/add_photo" />-->

            <!--<Button-->
            <!--android:id="@+id/button_addAudio"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:onClick="addAudio"-->
            <!--android:text="@string/add_audio" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="388dp"
            android:layout_height="351dp"
            android:orientation="horizontal">

            <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/user_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/New_Entry" />-->

            <ImageView
                android:id="@+id/imageView_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@mipmap/ic_launcher" />

            <VideoView
                android:id="@+id/videoview_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/user_text"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/New_Entry" />-->


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_addVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:onClick="addVideo"
        android:text="@string/add_video"
        app:layout_constraintBottom_toTopOf="@+id/Save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button_addAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:onClick="addAudio"
        android:text="@string/add_audio"
        app:layout_constraintBottom_toTopOf="@+id/Save_btn"
        app:layout_constraintEnd_toStartOf="@+id/button_addVideo"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/button_addPhoto"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/button_addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:onClick="addPhoto"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toTopOf="@+id/Save_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/Save_btn"
        android:layout_width="178dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:text="@string/save"
        android:onClick="saveEntry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
